# social-thing

./: .gitignore  README.md  pyproject.toml
api/: pyproject.toml
api/app/: db.py  dependencies.py  main.py
api/app/models/: post.py
api/app/routers/: comments.py  posts.py
app/: db.py  dependencies.py  main.py
app/models/: __init__.py  comment.py  post.py
app/routers/: comments.py  posts.py
client/: .prettierrc  next.config.js  package-lock.json  package.json
client/app/: fonts.ts  global.css  layout.tsx  page.tsx
client/app/apiClient/: index.ts
client/app/apiClient/core/: ApiError.ts  CancelablePromise.ts  OpenAPI.ts  request.ts
client/app/apiClient/models/: CommentCreate.ts  CommentRead.ts  CommentUpdate.ts  PostCreate.ts  PostRead.ts  PostReadWithComments.ts  PostUpdate.ts
client/app/apiClient/services/: CommentsService.ts  PostsService.ts
client/app/feed/: page.tsx  postCard.tsx
